<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="productViewModel"
            type="com.example.shoestore.viewModel.ShoeProductViewModel" />
    </data>

<LinearLayout
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_weight="0"
        style="@style/text_style"
        android:text="@string/shoe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/shoe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_weight="0"
        style="@style/text_style"
        android:text="@string/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_weight="0"
        style="@style/text_style"
        android:text="@string/shoe_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/shoe_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_weight="0"
        style="@style/text_style"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_marginTop="@dimen/layout_margin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/red"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
</layout>