<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/green_text_style"
            android:layout_weight="0"
            android:text="@string/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="40dp"
            style="@style/text_style"
            android:layout_weight="0"
            android:text="@string/instructions_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/yellow"
            android:text="@string/go_to_instructions"
            android:id="@+id/btn_goto_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>